--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <html>
 	<head>
+		<!-- Styles -->
+		<link rel="stylesheet/less" type="text/css" href="style/style.less" />
 		
+		<!-- Scripts -->
+		<script src="libs/less.min.js" type="text/javascript"></script>
+		<script src="libs/angular.min.js" type="text/javascript"></script>
+		
+		<script src="js/main.js" type="text/javascript"></script>
+		<script src="js/controllers/gameController.js" type="text/javascript"></script>
+		<script src="js/services/configService.js" type="text/javascript"></script>
+		<script src="js/services/minefieldService.js" type="text/javascript"></script>
+		
+		<script src="js/directives/rightClickDirective.js" type="text/javascript"></script>
 	</head>
-	<body>
-		<h1>
-			Hello World!
-		</h1>
+	<body ng-app="minesweeper">
+		<div id="game">
+			<div id="field" ng-controller="GameController as game">
+				<div class="row" ng-repeat="row in game.field track by $index">
+					<div class="square" 
+						 ng-repeat="square in row track by $index" 
+						 ng-click="game.reveal($event, $parent.$index, $index)"
+						 ng-right-click="game.plantFlag($event)">
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
