--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<!-- Scripts -->
 		<script src="libs/less.min.js" type="text/javascript"></script>
 		<script src="libs/angular.min.js" type="text/javascript"></script>
+		<script src="libs/jquery.js" type="text/javascript"></script>
 		
 		<script src="js/main.js" type="text/javascript"></script>
 		<script src="js/controllers/gameController.js" type="text/javascript"></script>
@@ -20,8 +21,10 @@
 				<div class="row" ng-repeat="row in game.field track by $index">
 					<div class="square" 
 						 ng-repeat="square in row track by $index" 
-						 ng-click="game.reveal($event, $parent.$index, $index)"
-						 ng-right-click="game.plantFlag($event)">
+						 ng-click="game.reveal($event)"
+						 ng-right-click="game.plantFlag($event)"
+						 Location="{{ $index }},{{ $parent.$index }}">
+						<!-- {{ square }} -->
 					</div>
 				</div>
 			</div>
