--- a/index.html
+++ b/index.html
@@ -7,33 +7,45 @@
 		<script src="libs/less.min.js" type="text/javascript"></script>
 		<script src="libs/angular.min.js" type="text/javascript"></script>
 		
+		<!-- main -->
 		<script src="js/main.js" type="text/javascript"></script>
+		
 		<!-- Controllers -->
-		<!--<script src="js/controllers/gameController.js" type="text/javascript"></script>-->
+		<script src="js/controllers/gameController.js" type="text/javascript"></script>
 		<script src="js/controllers/minefieldController.js" type="text/javascript"></script>
 		
 		<!-- Services -->
 		<script src="js/services/configService.js" type="text/javascript"></script>
+		<script src="js/services/gameService.js" type="text/javascript"></script>
 		<script src="js/services/minefieldService.js" type="text/javascript"></script>
 		<script src="js/services/mineGeneratorService.js" type="text/javascript"></script>
 		
+		<!-- Directives -->
 		<script src="js/directives/rightClickDirective.js" type="text/javascript"></script>
 	</head>
 	<body ng-app="minesweeper">
 		<div id="game">
+			<div id="main-menu" ng-controller="GameController as game">
+				<div>
+					{{ minesLeft() }}
+				</div>
+				<button ng-click="newGame()">
+					New game
+				</button>
+			</div>
 			<div id="field" ng-controller="MinefieldController as minefield">
 				<div class="row" ng-repeat="row in field">
 					<div class="square" 
 
 						 ng-repeat="square in row track by $index" 
 
-						 ng-click="minefield.reveal($index, $parent.$index)"
-						 ng-right-click="minefield.plantFlag($index, $parent.$index)"
+						 ng-click="reveal($index, $parent.$index)"
+						 ng-right-click="plantFlag($index, $parent.$index)"
 
-						 ng-class="minefield.determineClass($index, $parent.$index)"
+						 ng-class="determineClass($index, $parent.$index)"
 
 						 data-squarevalue="{{ square.value }}">
-						{{ square.displayValue() }}
+						{{ displayText($index, $parent.$index) }}
 					</div>
 				</div>
 			</div>	
