--- a/index.html
+++ b/index.html
@@ -1,54 +1,63 @@
 <html>
 	<head>
 		<!-- Styles -->
+		<link rel="stylesheet/less" type="text/css" href="style/variables.less" />
 		<link rel="stylesheet/less" type="text/css" href="style/style.less" />
+		<link rel="stylesheet/less" type="text/css" href="style/settings.less" />
+		<link rel="stylesheet/less" type="text/css" href="style/dark-theme.less" />
 		
 		<!-- Scripts -->
 		<script src="libs/less.min.js" type="text/javascript"></script>
 		<script src="libs/angular.min.js" type="text/javascript"></script>
 		
 		<!-- main -->
-		<script src="js/main.js" type="text/javascript"></script>
+		<script src="app/main.js" type="text/javascript"></script>
 		
 		<!-- Controllers -->
-		<script src="js/controllers/gameController.js" type="text/javascript"></script>
-		<script src="js/controllers/minefieldController.js" type="text/javascript"></script>
+		<script src="app/controllers/gameController.js" type="text/javascript"></script>
+		<script src="app/controllers/minefieldController.js" type="text/javascript"></script>
 		
 		<!-- Services -->
-		<script src="js/services/configService.js" type="text/javascript"></script>
-		<script src="js/services/gameService.js" type="text/javascript"></script>
-		<script src="js/services/minefieldService.js" type="text/javascript"></script>
-		<script src="js/services/mineGeneratorService.js" type="text/javascript"></script>
+		<script src="app/services/configService.js" type="text/javascript"></script>
+		<script src="app/services/gameService.js" type="text/javascript"></script>
+		<script src="app/services/minefieldService.js" type="text/javascript"></script>
+		<script src="app/services/mineGeneratorService.js" type="text/javascript"></script>
 		
 		<!-- Directives -->
-		<script src="js/directives/rightClickDirective.js" type="text/javascript"></script>
+		<script src="app/directives/rightClickDirective.js" type="text/javascript"></script>
+		
+		<script src="app/directives/ngSettings/ngSettings.controller.js" type="text/javascript"></script>
+		<script src="app/directives/ngSettings/ngSettings.directive.js" type="text/javascript"></script>		
 	</head>
 	<body ng-app="minesweeper">
-		<div id="game">
-			<div id="main-menu" ng-controller="GameController as game">
-				<div>
-					{{ minesLeft() }}
+		<div>
+			<div id="game">
+				<div id="main-menu" ng-controller="GameController as game">
+					<div>
+						{{ minesLeft() }}
+					</div>
+					<button ng-click="newGame()">
+						New game
+					</button>
 				</div>
-				<button ng-click="newGame()">
-					New game
-				</button>
-			</div>
-			<div id="field" ng-controller="MinefieldController as minefield">
-				<div class="row" ng-repeat="row in field">
-					<div class="square" 
+				<div id="field" ng-controller="MinefieldController as minefield">
+					<div class="row" ng-repeat="row in field">
+						<div class="square" 
 
-						 ng-repeat="square in row track by $index" 
+							 ng-repeat="square in row track by $index" 
 
-						 ng-click="reveal($index, $parent.$index)"
-						 ng-right-click="plantFlag($index, $parent.$index)"
+							 ng-click="reveal($index, $parent.$index)"
+							 ng-right-click="plantFlag($index, $parent.$index)"
 
-						 ng-class="determineClass($index, $parent.$index)"
+							 ng-class="determineClass($index, $parent.$index)"
 
-						 data-squarevalue="{{ square.value }}">
-						{{ displayText($index, $parent.$index) }}
+							 data-squarevalue="{{ square.value }}">
+							{{ displayText($index, $parent.$index) }}
+						</div>
 					</div>
 				</div>
-			</div>	
-		</div>
+			</div>
+			<div ng-settings id="settings"></div>
+		</div>	
 	</body>
 </html>
