--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 		<!-- Styles -->
 		<link rel="stylesheet/less" type="text/css" href="style/variables.less" />
 		<link rel="stylesheet/less" type="text/css" href="style/style.less" />
-		<link rel="stylesheet/less" type="text/css" href="style/settings.less" />
+		<link rel="stylesheet/less" type="text/css" href="style/options.less" />
+		<link rel="stylesheet/less" type="text/css" href="style/3d.less" />
+		<link rel="stylesheet/less" type="text/css" href="style/main-menu.less" />
 		<link rel="stylesheet/less" type="text/css" href="style/dark-theme.less" />
 		
 		<!-- Scripts -->
@@ -11,7 +13,7 @@
 		<script src="libs/angular.min.js" type="text/javascript"></script>
 		
 		<!-- main -->
-		<script src="app/main.js" type="text/javascript"></script>
+		<script src="app/module.js" type="text/javascript"></script>
 		
 		<!-- Controllers -->
 		<script src="app/controllers/gameController.js" type="text/javascript"></script>
@@ -22,12 +24,14 @@
 		<script src="app/services/gameService.js" type="text/javascript"></script>
 		<script src="app/services/minefieldService.js" type="text/javascript"></script>
 		<script src="app/services/mineGeneratorService.js" type="text/javascript"></script>
+		<script src="app/services/ultimateModeService.js" type="text/javascript"></script>
 		
 		<!-- Directives -->
 		<script src="app/directives/rightClickDirective.js" type="text/javascript"></script>
-		
-		<script src="app/directives/ngSettings/ngSettings.controller.js" type="text/javascript"></script>
-		<script src="app/directives/ngSettings/ngSettings.directive.js" type="text/javascript"></script>		
+		<script src="app/directives/ngGameOptions/ngGameOptions.controller.js" type="text/javascript"></script>
+		<script src="app/directives/ngGameOptions/ngGameOptions.directive.js" type="text/javascript"></script>
+		<script src="app/directives/square/square.controller.js" type="text/javascript"></script>
+		<script src="app/directives/square/square.directive.js" type="text/javascript"></script>
 	</head>
 	<body ng-app="minesweeper">
 		<div>
@@ -37,27 +41,16 @@
 						{{ minesLeft() }}
 					</div>
 					<button ng-click="newGame()">
-						New game
+						new
 					</button>
 				</div>
 				<div id="field" ng-controller="MinefieldController as minefield">
 					<div class="row" ng-repeat="row in field">
-						<div class="square" 
-
-							 ng-repeat="square in row track by $index" 
-
-							 ng-click="reveal($index, $parent.$index)"
-							 ng-right-click="plantFlag($index, $parent.$index)"
-
-							 ng-class="determineClass($index, $parent.$index)"
-
-							 data-squarevalue="{{ square.value }}">
-							{{ displayText($index, $parent.$index) }}
-						</div>
+						<square model="square" ng-repeat="square in row track by $index" /> 
 					</div>
 				</div>
 			</div>
-			<div ng-settings id="settings"></div>
+			<div ng-game-options id="options"></div>
 		</div>	
 	</body>
 </html>
