--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
 		
 		<!-- Controllers -->
 		<script src="app/controllers/gameController.js" type="text/javascript"></script>
-		<script src="app/controllers/minefieldController.js" type="text/javascript"></script>
 		
+		<!-- msFieldComponent -->
+		<script src="app/ms-field-component/ms-field.component.js" type="text/javascript"></script>
+		<script src="app/ms-field-component/ms-field.controller.js" type="text/javascript"></script>
+		
+
 		<!-- Services -->
 		<script src="app/services/configService.js" type="text/javascript"></script>
 		<script src="app/services/gameService.js" type="text/javascript"></script>
@@ -43,11 +47,7 @@
 						new
 					</button>
 				</div>
-				<div id="field" ng-controller="MinefieldController as minefield">
-					<div class="row" ng-repeat="row in field">
-						<square model="square" ng-repeat="square in row track by $index" /> 
-					</div>
-				</div>
+				<ms-field></ms-field>
 			</div>
 			<div ng-game-options id="options"></div>
 		</div>	
