--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				</div>
 				<ms-field></ms-field>
 			</div>
-			<div ng-game-options id="options"></div>
+			<div ms-game-options id="options"></div>
 		</div>	
 	</body>
 </html>
