Refactored Square and RightClick to new ms- prefixed setup

--- a/app/directives/ms-square/ms-square.tpl.html
+++ b/app/directives/ms-square/ms-square.tpl.html
@@ -1,7 +1,7 @@
 <div class="square" 
 
      ng-click="reveal($index, $parent.$index)"
-     ng-right-click="plantFlag($index, $parent.$index)"
+     ms-right-click="plantFlag($index, $parent.$index)"
 
      ng-class="determineClass($index, $parent.$index)"
 
