--- a/app/ms-field-component/ms-field.tpl.html
+++ b/app/ms-field-component/ms-field.tpl.html
@@ -1,3 +1,3 @@
 <div class="row" ng-repeat="row in field">
-    <square model="square" ng-repeat="square in row track by $index" /> 
+    <ms-square model="square" ng-repeat="square in row track by $index" /> 
 </div>
