--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 		<!-- main -->
 		<script src="app/module.js" type="text/javascript"></script>
 		
-		<!-- Controllers -->
-		<script src="app/controllers/gameController.js" type="text/javascript"></script>
+		<!-- ms-game Component -->
+		<script src="app/ms-game/ms-game.component.js" type="text/javascript"></script>
+		<script src="app/ms-game/ms-game.controller.js" type="text/javascript"></script>
 		
-		<!-- msFieldComponent -->
-		<script src="app/ms-field-component/ms-field.component.js" type="text/javascript"></script>
-		<script src="app/ms-field-component/ms-field.controller.js" type="text/javascript"></script>
-		
+
+		<!-- ms-field Component -->
+		<script src="app/ms-field/ms-field.component.js" type="text/javascript"></script>
+		<script src="app/ms-field/ms-field.controller.js" type="text/javascript"></script>
 
 		<!-- Services -->
 		<script src="app/services/configService.js" type="text/javascript"></script>
@@ -37,19 +38,6 @@
 		<script src="app/directives/ms-square/ms-square.directive.js" type="text/javascript"></script>
 	</head>
 	<body ng-app="minesweeper">
-		<div>
-			<div id="game">
-				<div id="main-menu" ng-controller="GameController as game">
-					<div>
-						{{ minesLeft() }}
-					</div>
-					<button ng-click="newGame()">
-						new
-					</button>
-				</div>
-				<ms-field></ms-field>
-			</div>
-			<div ms-game-options id="options"></div>
-		</div>	
+		<ms-game></ms-game>
 	</body>
 </html>
