--- a/app/directives/ms-square/ms-square.tpl.html
+++ b/app/directives/ms-square/ms-square.tpl.html
@@ -1,10 +1,10 @@
 <div class="square" 
 
      ng-click="reveal($index, $parent.$index)"
-     ms-right-click="plantFlag($index, $parent.$index)"
+     ms-right-click="ctrl.plantFlag($index, $parent.$index)"
 
-     ng-class="determineClass($index, $parent.$index)"
+     ng-class="ctrl.determineClass($index, $parent.$index)"
 
      data-squarevalue="{{ square.value }}">
-    {{ displayText($index, $parent.$index) }}
+    {{ ctrl.displayText($index, $parent.$index) }}
 </div>
