Renamed all Services to new .type.js setup

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 		<script src="app/ms-field/ms-field.controller.js" type="text/javascript"></script>
 
 		<!-- Services -->
-		<script src="app/services/configService.js" type="text/javascript"></script>
-		<script src="app/services/gameService.js" type="text/javascript"></script>
-		<script src="app/services/minefieldService.js" type="text/javascript"></script>
-		<script src="app/services/mineGeneratorService.js" type="text/javascript"></script>
+		<script src="app/services/config.service.js" type="text/javascript"></script>
+		<script src="app/services/game.service.js" type="text/javascript"></script>
+		<script src="app/services/minefield.service.js" type="text/javascript"></script>
+		<script src="app/services/mine-generator.service.js" type="text/javascript"></script>
 		
 		<!-- Directives -->
 		<script src="app/directives/ms-right-click/ms-right-click.directive.js" type="text/javascript"></script>
