Moved dependacy responsibility to bower

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<link rel="stylesheet/less" type="text/css" href="style/dark-theme.less" />
 		
 		<!-- Scripts -->
-		<script src="libs/less.min.js" type="text/javascript"></script>
-		<script src="libs/angular.min.js" type="text/javascript"></script>
+		<script src="bower_components/less/dist/less.min.js" type="text/javascript"></script>
+		<script src="bower_components/angular/angular.min.js" type="text/javascript"></script>
 		
 		<!-- main -->
 		<script src="app/module.js" type="text/javascript"></script>
