Fixed styling on victory screen

--- a/app/ms-game/ms-game.tpl.html
+++ b/app/ms-game/ms-game.tpl.html
@@ -10,7 +10,7 @@
         </div>
         <ms-field></ms-field>
         <div class="victory-popup" ng-show="isVictorious()">
-            <b>You beat the game!<b>
+            <b>You beat the game!</b>
             <button ng-click="$ctrl.newGame()">play again?</button>
         </div>
     </div>
